# gtfsblocks

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
gtfsblocks/: gtfs.py
gtfsblocks/tests/: test_gtfs.py
gtfsblocks/tests/data/nantucket/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
licenses/: EBUSOPT-LICENSE
